--- a/Dotnet.WMI.Win32/Dotnet.WMI.Win32.csproj
+++ b/Dotnet.WMI.Win32/Dotnet.WMI.Win32.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Management" Version="6.0.0" />
+    <PackageReference Include="System.Management" Version="6.0.2-mauipre.1.22054.8" />
   </ItemGroup>
 
 </Project>
